# fastmixture

./: README.md  environment.yml  pyproject.toml  setup.py
fastmixture/: cross.py  em.pyx  em_batch.pyx  fastmixture.py  functions.py  main.py  projection.py  shared.pyx  svd.pyx  utils.py
scripts/: evaluation.py  loglike.py  sumsquares.py
src/: em.pyx  em_batch.pyx  functions.py  main.py  svd.pyx
