[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "cython>3.0.0",
    "numpy>2.0.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "fastmixture"
version = "1.3.0"
description = "Fast Ancestry Estimation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-only" }
authors = [
    { name = "Jonas Meisner", email = "meisnerucph@gmail.com" }
]
dependencies = [
    "numpy>2.0.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta"
]

[project.urls]
Homepage = "https://github.com/Rosemeis/fastmixture"

[project.scripts]
fastmixture = "fastmixture.main:main"